Fix gpa spacing

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -20,3 +20,10 @@
   align-content: left;
   align-items: left;
 }
+
+div.spacer
+{
+    font-size: 0;
+    height: 0px;
+    width: 0.5rem;
+}
